--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                         </p>
                     </div>
-                    <div class="about__member-btn ptb-8 plr-16 mb-16">
+                    <div class="about__member-btn btn mb-16">
                         Contact
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                         </p>
                     </div>
-                    <div class="about__member-btn ptb-8 plr-16 mb-16">
+                    <div class="about__member-btn btn mb-16">
                         Contact
                     </div>
                 </div>
@@ -149,7 +149,7 @@
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                         </p>
                     </div>
-                    <div class="about__member-btn ptb-8 plr-16 mb-16">
+                    <div class="about__member-btn btn mb-16">
                         Contact
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                         </p>
                     </div>
-                    <div class="about__member-btn ptb-8 plr-16 mb-16">
+                    <div class="about__member-btn btn mb-16">
                         Contact
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                 <input type="email" name="" required id="" class="contact__form-control mb-16" placeholder="Email">
                 <input type="text" name="" required id="" class="contact__form-control mb-16" placeholder="Subject">
                 <input type="text" name="" required id="" class="contact__form-control mb-16" placeholder="Comment">
-                <button class="contact__form-btn mtb-16 ptb-8 plr-16">
+                <button class="contact__form-btn mtb-16 btn">
                     Send Message
                 </button>
             </form>
