--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
     <!-- footer -->
     <div id="footer">
         <p class="mtb-16">Powered by <a href="#">w3.css</a></p>
+        <p>test</p>
     </div>
 </body>
 
